install react wow and setup assets folder

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="index.jsx"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Ashur's</title>
@@ -8,4 +9,7 @@
 <body>
     <div id='root'></div>
 </body>
+<!-- https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js
+ -->
+ <!-- <scrip src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> -->
 </html>
